--- a/common.css
+++ b/common.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "~@/fonts/SIMKAI.css";
 /* H5公共样式，用于所有H5开发页面*/
 html {
   font-family: "Microsoft Yahei", "Hiragino Sans GB", "Helvetica Neue",
@@ -31,11 +32,11 @@ color: rgba(100, 65, 37, 0.97); /* 使用半透明颜色值 */
 }
 
 .kuohao {
-  width: 1em; font-family: "楷体", "楷体_GB2312";
+  width: 1em; font-family: "楷体", "楷体_GB2312", "SIMKAI";
 }
 
 .kuoHao_WuPinYin {
-  font-family: "楷体", "楷体_GB2312";
+  font-family: "楷体", "楷体_GB2312", "SIMKAI";
 }
 
 .yiJiBiaoTi_p{
@@ -75,7 +76,7 @@ color: rgba(100, 65, 37, 0.97); /* 使用半透明颜色值 */
 }
 
 .zhengWen_XiaoZi{
-  line-height: 2em; margin-bottom: 0px; padding: 0px; outline: 0px; max-width: 100%; clear: both; min-height: 1em; color: rgb(100, 65, 37); font-family: "楷体", "楷体_GB2312", system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif; font-size: 14px; overflow-wrap: break-word !important;
+  line-height: 2em; margin-bottom: 0px; padding: 0px; outline: 0px; max-width: 100%; clear: both; min-height: 1em; color: rgb(100, 65, 37); font-family: "楷体", "楷体_GB2312", "SIMKAI", system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif; font-size: 14px; overflow-wrap: break-word !important;
 }
 
 .zuoZhe{
@@ -98,9 +99,17 @@ color: rgba(100, 65, 37, 0.97); /* 使用半透明颜色值 */
   margin: 0px; padding: 0px; outline: 0px; max-width: 100%; color: rgb(114, 41, 41); font-size: 18px; visibility: visible; overflow-wrap: break-word !important;
 }
 
-.zhengWen_XiaYi{
+.zhengWen_ShangYi{
   margin-top: -16px;line-height: 2em; margin-bottom: 0px; padding: 0px; outline: 0px; max-width: 100%; clear: both; min-height: 1em; color: rgb(100, 65, 37); font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif; font-size: 16px; overflow-wrap: break-word !important;
 }
+
+.zhengWen_XiaYi{
+  margin-top: 16px;line-height: 2em; margin-bottom: 0px; padding: 0px; outline: 0px; max-width: 100%; clear: both; min-height: 1em; color: rgb(100, 65, 37); font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif; font-size: 16px; overflow-wrap: break-word !important;
+}
+
+
+
+
 
 .container{
     padding:20px 10px 70px 10px!important;
