--- a/common.css
+++ b/common.css
@@ -32,7 +32,7 @@ color: rgba(100, 65, 37, 0.97); /* 使用半透明颜色值 */
 }
 
 .kuohao {
-  
+  width: 1em; font-family: "楷体", "楷体_GB2312", "SIMKAI";
 }
 
 .kuoHao_WuPinYin {
