--- a/common.css
+++ b/common.css
@@ -33,6 +33,23 @@ white-space: nowrap;
 color: rgba(100, 65, 37, 0.8); /* 使用半透明颜色值 */
 font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif; 
 }
+
+.container-content-ZhuYin {
+  display: inline-block;
+  line-height: 3em;
+  margin-bottom: 0px;
+  padding: 0px;
+  outline: 0px;
+  max-width: 100%;
+  clear: both;
+  min-height: 1em;
+  color: rgb(100, 65, 37);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif;
+  font-size: 16px;
+  overflow-wrap: break-word !important;
+  margin-left: 5px;
+}
+
 /* 自定义字形 */
 .custom-font {
   font-family: 'MyFont-Regular' /* 使用自定义字形 */
